<?xml version="1.0"?>
<package format="2">
  <name>summit_connector</name>
  <version>0.0.0</version>
  <description>The summit_connector package</description>
  <maintainer email="panpan@todo.todo">panpan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>crowd_pomdp_planner</build_depend>
  <build_depend>msg_builder</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>crowd_pomdp_planner</build_export_depend>
  <build_export_depend>msg_builder</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>crowd_pomdp_planner</exec_depend>
  <exec_depend>joy</exec_depend>
  <export>
  </export>
</package>
